added backend PATCH playlist request
